Fixed tooltips not working This was caused by .col-title having overflow: hidden, which is probably necessary, but breaks important functionality

--- a/css/apollo.css
+++ b/css/apollo.css
@@ -410,7 +410,6 @@ input[type="text"]
 	display: inline-block;
 	position: relative;
 	padding-bottom: 10px;
-	overflow: hidden;
 	text-overflow: ellipsis;
 }
 .col-title:hover > .col-desc { display: block; }
